[package]
name = "hashheap"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "data structures that combine a hashmap and a min/max priority heap, with main operations requiring O(1) or O(log n) time."
repository = "https://github.com/chuckcscccl/hashheap/"
keywords = ["map", "heap", "hash", "priority", "queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

